# Projet_securitecloud_used

./: .env.example  .env.exemple  .gitignore  README.md  backend-td-v8.json  backend-td.json  docker-compose.yml  frontend-td.json
.github/workflows/: ci-cd.yml  deploy-ecs.yml  push-ecr.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: db.py  main.py  ratelimit.py  schemas.py
backend/app/ml/: credit_model.py  decroch_model.py  decrochage_model.py  model.py
backend/app/models/: item.py  prediction.py
backend/app/routes/: admin.py  fields.py  health.py  items.py  predict.py
backend/tests/: test_health.py  test_items.py  test_predict.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  auth.js  main.jsx
frontend/src/pages/: AdminDashboard.jsx  AdminLayout.jsx  AdminLogin.jsx  AdminPredictions.jsx  PublicForm.jsx
infra/aws/: AUTOMATION.md  README.md  architecture-budget.drawio  architecture.drawio  s3-model-read-policy.example.json  task-definition-backend.example.json  task-definition-frontend.example.json
scripts/: build-images.sh  preflight.sh  push-dockerhub.sh  push-ecr.ps1  push-ecr.sh  train.py
