[project]
name = "projet-cloud-backend"
version = "0.1.0"
description = "Template backend FastAPI - Master IA 2iE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.133.0",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.2.1",
    "scikit-learn==1.5.2",
    "joblib==1.4.2",
    "boto3==1.35.36",
    "pyjwt==2.10.1",
    "google-auth==2.36.0",
    "requests==2.32.3",
    "slowapi==0.1.9",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.7.0",
    "httpx==0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["E501"]
"app/routes/*.py" = ["B008"]  # FastAPI utilise Depends() en argument par défaut
"app/auth.py" = ["B008"]      # idem : dépendances FastAPI en argument par défaut

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
